Wed Feb 19 01:57:07 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
        * orbsvcs/ImplRepo_Service/Locator_Repository.cpp:
          Be sure to check the JacORB server namespace in all instances when
          searching for an active server info entry.

        * orbsvcs/ImplRepo_Service/tao_imr_i.cpp:
          Only report a specific server as not found if the name comes back empty.

Tue Feb 18 16:06:39 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
          Throw a more-apt exception when the server requested to be killed
          is not running.

Tue Feb 18 15:41:16 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/orbsvcs/PortableGroup/PG_Object_Group_Storable.cpp:
        * tao/Storable_File_Guard.cpp:
          Added debug output during guard initialization to caputre
          errors that raise exceptions. Also be sure to release the
          mutex acquired before the throw.

Thu Feb 13 23:54:35 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/ImplRepo_Service/ImR_Locator_i.cpp:
          Make sure servers added to the live checker use the proper ID.

        * orbsvcs/ImplRepo_Service/Locator_Repository.cpp:
          Allow multiple link commands to be used to add multiple combined POAs.

Thu Feb 13 14:57:03 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * bin/tao_other_tests.lst:
          Add new test.

        * orbsvcs/ImplRepo_Service/Locator_Repository.cpp:
          Fix to find pid-identified servers after a shutdown reset
          the last known pid.

        * orbsvcs/tests/ImplRepo/kill_slow_server:
          Test to verify the above works.

Wed Feb 12 20:08:40 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * orbsvcs/tests/ImplRepo/link_poas/Test_i.cpp:
          Scoreboard cleanup.

Tue Feb 11 23:01:07 UTC 2014  Phil Mesnier  <mesnier_p@ociweb.com>

        * NEWS: